# swing-tranding-report

./: .env.example  .gitignore  PRD.md  README.md  ROADMAP.md  TODO.md  config.example.yaml  config.yaml  holdings.example.yaml  pyproject.toml
docs/: ARCHITECTURE.md  config-migration.md  daily-candle-eval-todo.md  daily-candle-evaluation-design.md  holdings-schema.md  kis-setup.md  report-spec.md  runbook.md
docs/adr/: ADR-0001-config-precedence.md
docs/design/: kis-integration.md  reports.md  screener.md  sell-us.md  signals.md
sab/: __main__.py  config.py  config_loader.py  fx.py  holdings_loader.py  scan.py  sell.py
sab/data/: holiday_cache.py  kis_client.py  kr_calendar.py  pykrx_client.py  us_calendar.py
sab/report/: __init__.py  markdown.py  sell_report.py
sab/screener/: kis_overseas_screener.py  kis_screener.py  overseas_screener.py
sab/signals/: __init__.py  eval_index.py  evaluator.py  hybrid_buy.py  hybrid_sell.py  indicators.py  sell_rules.py
sab/utils/: market_time.py
tests/: test_eval_index.py  test_holiday_cache.py  test_hybrid_buy_state.py  test_kis_client_overseas_holidays.py  test_scan_us_holidays_call.py  test_sell_helpers.py  test_us_calendar.py
